@@ -1,7 +1,6 @@
 package uk.ac.ox.it.calendarimporter.jobs;
 
 import com.nimbusds.jose.JOSEException;
-import edu.ksu.canvas.CanvasApiFactory;
 import edu.ksu.canvas.interfaces.CalendarReader;
 import edu.ksu.canvas.interfaces.CalendarWriter;
 import edu.ksu.canvas.model.CalendarEvent;
@@ -14,6 +13,7 @@ import org.quartz.JobExecutionContext;
 import org.quartz.JobExecutionException;
 import org.quartz.Trigger;
 import org.quartz.TriggerBuilder;
+import org.springframework.boot.test.context.SpringBootTest;
 import uk.ac.ox.it.calendarimporter.jobs.csv.CSVImportJob;
 import uk.ac.ox.it.calendarimporter.jobs.csv.CSVReader;
 import uk.ac.ox.it.calendarimporter.jobs.csv.HeaderException;
@@ -30,7 +30,8 @@ import uk.ac.ox.it.calendarimporter.service.ImportEventService;
 import uk.ac.ox.it.calendarimporter.service.ProgressService;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
@@ -40,10 +41,11 @@ import java.util.TimeZone;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.*;
 
+@SpringBootTest
 class CleanoutJobTest {
 
     @Test
-    public void testValidCall() throws JobExecutionException, IOException, JOSEException, HeaderException {
+    public void testValidCall() throws JobExecutionException, IOException, JOSEException, HeaderException, URISyntaxException {
 
         CleanoutJob cleanoutJob = new CleanoutJob();
         User user = new User();
@@ -69,7 +71,6 @@ class CleanoutJobTest {
         ImportEventService importEventService = mock(ImportEventService.class);
         CanvasCalendarService canvasCalendarService = mock(CanvasCalendarService.class);
         DepositService depositService = mock(DepositService.class);
-        CanvasApiFactory canvasApiFactory = mock(CanvasApiFactory.class);
         CalendarWriter calendarWriter = mock(CalendarWriter.class);
         CalendarReader calendarReader = mock(CalendarReader.class);
         OauthToken oauthToken = mock(OauthToken.class);
@@ -77,8 +78,8 @@ class CleanoutJobTest {
         JobExecutionContext context = mock(JobExecutionContext.class);
         JobDataMap map = new JobDataMap();
         map.put("calendar_import_id", 118L);
-        map.put("time_zone", TimeZone.getDefault().toString());
-        map.put("url", "http://bbc.co.uk");
+        map.put("time_zone",  TimeZone.getTimeZone("UTC").toString());
+        map.put("url", getClass().getResource("/one-event.csv").toURI().toURL().toString());
         map.put("all", true);
         when(context.getMergedJobDataMap()).thenReturn(map);
         when(context.getTrigger()).thenReturn(trigger);
@@ -92,16 +93,15 @@ class CleanoutJobTest {
         when(progressService.updateJob(any(), any(), any())).thenReturn(null);
         when(csvReader.parseCSV(any(), any(), any())).thenReturn(calendarEvents);
         when(calendarReader.listCurrentUserCalendarEvents(any())).thenReturn(calendarEvents);
-        when(depositService.deposit(any(), any())).thenReturn(new URL("https://bbc.co.uk"));
-        when(canvasApiFactory.getReader(any(), any())).thenReturn(calendarReader);
-        when(canvasApiFactory.getWriter(any(), any())).thenReturn(calendarWriter);
+        when(depositService.deposit(any(), any())).thenReturn(getClass().getResource("/one-event.csv").toURI().toURL());
         doNothing().when(importEventService).eventCreated(any(), any(), any());
         doNothing().when(canvasCalendarService).resetRetryCounter(any());
 
         cleanoutJob.setTenantRepository(tenantRepository);
         cleanoutJob.setUserRepository(userRepository);
         cleanoutJob.setCanvasTokenCreator(canvasTokenCreator);
-        cleanoutJob.setCanvasApiFactory(canvasApiFactory);
+        cleanoutJob.setCalendarReader(calendarReader);
+        cleanoutJob.setCalendarWriter(calendarWriter);
 
         cleanoutJob.execute(context);
         verify(calendarReader, times(1)).listCurrentUserCalendarEvents(any());
@@ -130,7 +130,7 @@ class CleanoutJobTest {
     }
 
     @Test
-    public void testCallNoUser() {
+    public void testCallNoUser() throws URISyntaxException, MalformedURLException {
         CleanoutJob cleanoutJob = new CleanoutJob();
         Trigger trigger = TriggerBuilder.newTrigger().startNow().withIdentity("key").build();
 
@@ -142,8 +142,8 @@ class CleanoutJobTest {
         JobExecutionContext context = mock(JobExecutionContext.class);
         JobDataMap map = new JobDataMap();
         map.put("calendar_import_id", 118L);
-        map.put("time_zone", TimeZone.getDefault().toString());
-        map.put("url", "http://bbc.co.uk");
+        map.put("time_zone",  TimeZone.getTimeZone("UTC").toString());
+        map.put("url", getClass().getResource("/one-event.csv").toURI().toURL().toString());
         when(context.getMergedJobDataMap()).thenReturn(map);
         when(context.getTrigger()).thenReturn(trigger);
         when(context.getJobDetail()).thenReturn(job);
