@@ -1,7 +1,6 @@
 package uk.ac.ox.it.calendarimporter.jobs.csv;
 
 import com.nimbusds.jose.JOSEException;
-import edu.ksu.canvas.CanvasApiFactory;
 import edu.ksu.canvas.interfaces.CalendarReader;
 import edu.ksu.canvas.interfaces.CalendarWriter;
 import edu.ksu.canvas.model.CalendarEvent;
@@ -14,6 +13,8 @@ import org.quartz.JobExecutionContext;
 import org.quartz.JobExecutionException;
 import org.quartz.Trigger;
 import org.quartz.TriggerBuilder;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
 import uk.ac.ox.it.calendarimporter.CalendarUrlConfiguration;
 import uk.ac.ox.it.calendarimporter.persistence.model.CalendarImport;
 import uk.ac.ox.it.calendarimporter.persistence.model.ImportedEvent;
@@ -26,11 +27,11 @@ import uk.ac.ox.it.calendarimporter.persistence.repo.UserRepository;
 import uk.ac.ox.it.calendarimporter.service.CanvasCalendarService;
 import uk.ac.ox.it.calendarimporter.service.CanvasTokenCreator;
 import uk.ac.ox.it.calendarimporter.service.DepositService;
-import uk.ac.ox.it.calendarimporter.service.ImportEventService;
 import uk.ac.ox.it.calendarimporter.service.ProgressService;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
@@ -40,10 +41,14 @@ import java.util.TimeZone;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.*;
 
+@SpringBootTest
 class CSVReImportJobTest {
 
+    @Autowired
+    private CSVReader reader;
+
     @Test
-    public void testValidCall() throws JobExecutionException, IOException, JOSEException, HeaderException {
+    public void testValidCall() throws JobExecutionException, IOException, JOSEException, URISyntaxException, HeaderException {
 
         CSVReimportJob csvReimportJob = new CSVReimportJob();
         CalendarImport calendarImport = new CalendarImport();
@@ -53,8 +58,8 @@ class CSVReImportJobTest {
 
         JobDataMap map = new JobDataMap();
         map.put("calendar_import_id", 118L);
-        map.put("time_zone", TimeZone.getDefault().toString());
-        map.put("url", "https://bbc.co.uk");
+        map.put("time_zone",  TimeZone.getTimeZone("UTC").toString());
+        map.put("url", getClass().getResource("/one-event.csv").toURI().toURL().toString());
 
         List<CalendarEvent> calendarEvents = new ArrayList<>();
         CalendarEvent calendarEvent = new CalendarEvent();
@@ -64,11 +69,11 @@ class CSVReImportJobTest {
         calendarEvent.setEndAt(Instant.now());
         calendarEvents.add(calendarEvent);
 
-        ImportedEvent.ImportedEventIdentity identity =
-                new ImportedEvent.ImportedEventIdentity(5678L, calendarEvent.getId());
-        ImportedEvent event = new ImportedEvent(identity, calendarImport, ImportedEvent.Status.CREATED);
+        ImportedEvent.ImportedEventIdentity identity1 =
+                new ImportedEvent.ImportedEventIdentity(5679L, calendarEvent.getId());
+        ImportedEvent event1 = new ImportedEvent(identity1, calendarImport, ImportedEvent.Status.CREATED);
         List< ImportedEvent > importedEvents = new ArrayList<>();
-        importedEvents.add(event);
+        importedEvents.add(event1);
 
         TenantRepository tenantRepository = mock(TenantRepository.class);
         UserRepository userRepository = mock(UserRepository.class);
@@ -77,13 +82,11 @@ class CSVReImportJobTest {
         OauthToken oauthToken = mock(OauthToken.class);
         ImportedEventRepository importedEventRepository = mock(ImportedEventRepository.class);
         ProgressService progressService = mock(ProgressService.class);
-        CSVReader csvReader = mock(CSVReader.class);
         CalendarReader calendarReader = mock(CalendarReader.class);
         CalendarWriter calendarWriter = mock(CalendarWriter.class);
         CanvasCalendarService canvasCalendarService = mock(CanvasCalendarService.class);
         DepositService depositService = mock(DepositService.class);
         CalendarUrlConfiguration calendarUrlConfiguration = mock(CalendarUrlConfiguration.class);
-        CanvasApiFactory canvasApiFactory = mock(CanvasApiFactory.class);
 
         when(context.getMergedJobDataMap()).thenReturn(map);
         when(context.getTrigger()).thenReturn(trigger);
@@ -95,29 +98,250 @@ class CSVReImportJobTest {
                 .findById(any())).thenReturn(Optional.of(calendarImport));
         when(canvasTokenCreator.getToken(any(), any())).thenReturn(oauthToken);
         when(progressService.updateJob(any(), any(), any())).thenReturn(null);
-        when(canvasApiFactory.getWriter(any(), any())).thenReturn(calendarWriter);
-        when(canvasApiFactory.getReader(any(), any())).thenReturn(calendarReader);
         doNothing().when(canvasCalendarService).resetRetryCounter(any());
-        when(depositService.deposit(any(), any())).thenReturn(new URL("https://bbc.co.uk"));
-        when(csvReader.parseCSV(any(), any(), any())).thenReturn(calendarEvents);
+        when(depositService.deposit(any(), any())).thenReturn(getClass().getResource("/one-event.csv").toURI().toURL());
         when(importedEventRepository.findByCalendarImportAndStatusIn(any(), any())).thenReturn(importedEvents);
-        when(calendarReader.getCalendarEvent(any())).thenReturn(Optional.of(calendarEvent));
+        when(calendarReader.getCalendarEvent(any())).thenReturn(Optional.empty());
 
         csvReimportJob.setTenantRepository(tenantRepository);
         csvReimportJob.setUserRepository(userRepository);
         csvReimportJob.setCalendarImportRepository(calendarImportRepository);
         csvReimportJob.setCanvasTokenCreator(canvasTokenCreator);
         csvReimportJob.setCalendarUrlConfiguration(calendarUrlConfiguration);
-        csvReimportJob.setCSVReader(csvReader);
+        csvReimportJob.setCSVReader(reader);
         csvReimportJob.setImportedEventRepository(importedEventRepository);
         csvReimportJob.setProgressService(progressService);
         csvReimportJob.setCanvasCalendarService(canvasCalendarService);
         csvReimportJob.setDepositService(depositService);
         csvReimportJob.setMaxEventsCSV(1000);
-        csvReimportJob.setCanvasApiFactory(canvasApiFactory);
+        csvReimportJob.setCalendarReader(calendarReader);
+        csvReimportJob.setCalendarWriter(calendarWriter);
 
         csvReimportJob.execute(context);
-        verify(csvReader, times(1)).parseCSV(any(), any(), any());
+        verify(calendarReader, times(1)).getCalendarEvent(any());
+    }
+
+    @Test
+    public void testValidCallNoHeaders() throws JobExecutionException, IOException, JOSEException, URISyntaxException {
+
+        CSVReimportJob csvReimportJob = new CSVReimportJob();
+        CalendarImport calendarImport = new CalendarImport();
+        Trigger trigger = TriggerBuilder.newTrigger().startNow().withIdentity("key").build();
+        JobDetail job = JobBuilder.newJob(CSVImportJob.class).build();
+        JobExecutionContext context = mock(JobExecutionContext.class);
+
+        JobDataMap map = new JobDataMap();
+        map.put("calendar_import_id", 118L);
+        map.put("time_zone",  TimeZone.getTimeZone("UTC").toString());
+        map.put("url", getClass().getResource("/no-headers.csv").toURI().toURL().toString());
+
+        List<CalendarEvent> calendarEvents = new ArrayList<>();
+        CalendarEvent calendarEvent = new CalendarEvent();
+        calendarEvent.setId(105);
+        calendarEvent.setContextCode("user_105");
+        calendarEvent.setStartAt(Instant.now());
+        calendarEvent.setEndAt(Instant.now());
+        calendarEvents.add(calendarEvent);
+
+        ImportedEvent.ImportedEventIdentity identity1 =
+                new ImportedEvent.ImportedEventIdentity(5679L, calendarEvent.getId());
+        ImportedEvent event1 = new ImportedEvent(identity1, calendarImport, ImportedEvent.Status.CREATED);
+        List< ImportedEvent > importedEvents = new ArrayList<>();
+        importedEvents.add(event1);
+
+        TenantRepository tenantRepository = mock(TenantRepository.class);
+        UserRepository userRepository = mock(UserRepository.class);
+        CalendarImportRepository calendarImportRepository = mock(CalendarImportRepository.class);
+        CanvasTokenCreator canvasTokenCreator = mock(CanvasTokenCreator.class);
+        OauthToken oauthToken = mock(OauthToken.class);
+        ImportedEventRepository importedEventRepository = mock(ImportedEventRepository.class);
+        ProgressService progressService = mock(ProgressService.class);
+        CalendarReader calendarReader = mock(CalendarReader.class);
+        CalendarWriter calendarWriter = mock(CalendarWriter.class);
+        CanvasCalendarService canvasCalendarService = mock(CanvasCalendarService.class);
+        DepositService depositService = mock(DepositService.class);
+        CalendarUrlConfiguration calendarUrlConfiguration = mock(CalendarUrlConfiguration.class);
+
+        when(context.getMergedJobDataMap()).thenReturn(map);
+        when(context.getTrigger()).thenReturn(trigger);
+        when(context.getJobDetail()).thenReturn(job);
+        when(tenantRepository.findByName(any())).thenReturn(Optional.of(new Tenant()));
+        when(userRepository
+                .findBySubjectAndTenantName(any(), any())).thenReturn(Optional.of(new User()));
+        when(calendarImportRepository
+                .findById(any())).thenReturn(Optional.of(calendarImport));
+        when(canvasTokenCreator.getToken(any(), any())).thenReturn(oauthToken);
+        when(progressService.updateJob(any(), any(), any())).thenReturn(null);
+        doNothing().when(canvasCalendarService).resetRetryCounter(any());
+        when(depositService.deposit(any(), any())).thenReturn(getClass().getResource("/one-event.csv").toURI().toURL());
+        when(importedEventRepository.findByCalendarImportAndStatusIn(any(), any())).thenReturn(importedEvents);
+        when(calendarReader.getCalendarEvent(any())).thenReturn(Optional.empty());
+
+        csvReimportJob.setTenantRepository(tenantRepository);
+        csvReimportJob.setUserRepository(userRepository);
+        csvReimportJob.setCalendarImportRepository(calendarImportRepository);
+        csvReimportJob.setCanvasTokenCreator(canvasTokenCreator);
+        csvReimportJob.setCalendarUrlConfiguration(calendarUrlConfiguration);
+        csvReimportJob.setCSVReader(reader);
+        csvReimportJob.setImportedEventRepository(importedEventRepository);
+        csvReimportJob.setProgressService(progressService);
+        csvReimportJob.setCanvasCalendarService(canvasCalendarService);
+        csvReimportJob.setDepositService(depositService);
+        csvReimportJob.setMaxEventsCSV(1000);
+        csvReimportJob.setCalendarReader(calendarReader);
+        csvReimportJob.setCalendarWriter(calendarWriter);
+
+        csvReimportJob.execute(context);
+        verify(calendarReader, times(0)).getCalendarEvent(any());
+    }
+
+
+    @Test
+    public void testValidCallWrongHeaders() throws JobExecutionException, IOException, JOSEException, URISyntaxException {
+
+        CSVReimportJob csvReimportJob = new CSVReimportJob();
+        CalendarImport calendarImport = new CalendarImport();
+        Trigger trigger = TriggerBuilder.newTrigger().startNow().withIdentity("key").build();
+        JobDetail job = JobBuilder.newJob(CSVImportJob.class).build();
+        JobExecutionContext context = mock(JobExecutionContext.class);
+
+        JobDataMap map = new JobDataMap();
+        map.put("calendar_import_id", 118L);
+        map.put("time_zone",  TimeZone.getTimeZone("UTC").toString());
+        map.put("url", getClass().getResource("/wrong-headers.csv").toURI().toURL().toString());
+
+        List<CalendarEvent> calendarEvents = new ArrayList<>();
+        CalendarEvent calendarEvent = new CalendarEvent();
+        calendarEvent.setId(105);
+        calendarEvent.setContextCode("user_105");
+        calendarEvent.setStartAt(Instant.now());
+        calendarEvent.setEndAt(Instant.now());
+        calendarEvents.add(calendarEvent);
+
+        ImportedEvent.ImportedEventIdentity identity1 =
+                new ImportedEvent.ImportedEventIdentity(5679L, calendarEvent.getId());
+        ImportedEvent event1 = new ImportedEvent(identity1, calendarImport, ImportedEvent.Status.CREATED);
+        List< ImportedEvent > importedEvents = new ArrayList<>();
+        importedEvents.add(event1);
+
+        TenantRepository tenantRepository = mock(TenantRepository.class);
+        UserRepository userRepository = mock(UserRepository.class);
+        CalendarImportRepository calendarImportRepository = mock(CalendarImportRepository.class);
+        CanvasTokenCreator canvasTokenCreator = mock(CanvasTokenCreator.class);
+        OauthToken oauthToken = mock(OauthToken.class);
+        ImportedEventRepository importedEventRepository = mock(ImportedEventRepository.class);
+        ProgressService progressService = mock(ProgressService.class);
+        CalendarReader calendarReader = mock(CalendarReader.class);
+        CalendarWriter calendarWriter = mock(CalendarWriter.class);
+        CanvasCalendarService canvasCalendarService = mock(CanvasCalendarService.class);
+        DepositService depositService = mock(DepositService.class);
+        CalendarUrlConfiguration calendarUrlConfiguration = mock(CalendarUrlConfiguration.class);
+
+        when(context.getMergedJobDataMap()).thenReturn(map);
+        when(context.getTrigger()).thenReturn(trigger);
+        when(context.getJobDetail()).thenReturn(job);
+        when(tenantRepository.findByName(any())).thenReturn(Optional.of(new Tenant()));
+        when(userRepository
+                .findBySubjectAndTenantName(any(), any())).thenReturn(Optional.of(new User()));
+        when(calendarImportRepository
+                .findById(any())).thenReturn(Optional.of(calendarImport));
+        when(canvasTokenCreator.getToken(any(), any())).thenReturn(oauthToken);
+        when(progressService.updateJob(any(), any(), any())).thenReturn(null);
+        doNothing().when(canvasCalendarService).resetRetryCounter(any());
+        when(depositService.deposit(any(), any())).thenReturn(getClass().getResource("/wrong-headers.csv").toURI().toURL());
+        when(importedEventRepository.findByCalendarImportAndStatusIn(any(), any())).thenReturn(importedEvents);
+        when(calendarReader.getCalendarEvent(any())).thenReturn(Optional.empty());
+
+        csvReimportJob.setTenantRepository(tenantRepository);
+        csvReimportJob.setUserRepository(userRepository);
+        csvReimportJob.setCalendarImportRepository(calendarImportRepository);
+        csvReimportJob.setCanvasTokenCreator(canvasTokenCreator);
+        csvReimportJob.setCalendarUrlConfiguration(calendarUrlConfiguration);
+        csvReimportJob.setCSVReader(reader);
+        csvReimportJob.setImportedEventRepository(importedEventRepository);
+        csvReimportJob.setProgressService(progressService);
+        csvReimportJob.setCanvasCalendarService(canvasCalendarService);
+        csvReimportJob.setDepositService(depositService);
+        csvReimportJob.setMaxEventsCSV(1000);
+        csvReimportJob.setCalendarReader(calendarReader);
+        csvReimportJob.setCalendarWriter(calendarWriter);
+
+        csvReimportJob.execute(context);
+        verify(calendarReader, times(0)).getCalendarEvent(any());
+    }
+
+    @Test
+    public void testValidCallAPIThrowsIOException() throws JobExecutionException, IOException, JOSEException, URISyntaxException {
+
+        CSVReimportJob csvReimportJob = new CSVReimportJob();
+        CalendarImport calendarImport = new CalendarImport();
+        Trigger trigger = TriggerBuilder.newTrigger().startNow().withIdentity("key").build();
+        JobDetail job = JobBuilder.newJob(CSVImportJob.class).build();
+        JobExecutionContext context = mock(JobExecutionContext.class);
+
+        JobDataMap map = new JobDataMap();
+        map.put("calendar_import_id", 118L);
+        map.put("time_zone",  TimeZone.getTimeZone("UTC").toString());
+        map.put("url", getClass().getResource("/one-event.csv").toURI().toURL().toString());
+
+        List<CalendarEvent> calendarEvents = new ArrayList<>();
+        CalendarEvent calendarEvent = new CalendarEvent();
+        calendarEvent.setId(105);
+        calendarEvent.setContextCode("user_105");
+        calendarEvent.setStartAt(Instant.now());
+        calendarEvent.setEndAt(Instant.now());
+        calendarEvents.add(calendarEvent);
+
+        ImportedEvent.ImportedEventIdentity identity1 =
+                new ImportedEvent.ImportedEventIdentity(5679L, calendarEvent.getId());
+        ImportedEvent event1 = new ImportedEvent(identity1, calendarImport, ImportedEvent.Status.CREATED);
+        List< ImportedEvent > importedEvents = new ArrayList<>();
+        importedEvents.add(event1);
+
+        TenantRepository tenantRepository = mock(TenantRepository.class);
+        UserRepository userRepository = mock(UserRepository.class);
+        CalendarImportRepository calendarImportRepository = mock(CalendarImportRepository.class);
+        CanvasTokenCreator canvasTokenCreator = mock(CanvasTokenCreator.class);
+        OauthToken oauthToken = mock(OauthToken.class);
+        ImportedEventRepository importedEventRepository = mock(ImportedEventRepository.class);
+        ProgressService progressService = mock(ProgressService.class);
+        CalendarReader calendarReader = mock(CalendarReader.class);
+        CalendarWriter calendarWriter = mock(CalendarWriter.class);
+        CanvasCalendarService canvasCalendarService = mock(CanvasCalendarService.class);
+        DepositService depositService = mock(DepositService.class);
+        CalendarUrlConfiguration calendarUrlConfiguration = mock(CalendarUrlConfiguration.class);
+
+        when(context.getMergedJobDataMap()).thenReturn(map);
+        when(context.getTrigger()).thenReturn(trigger);
+        when(context.getJobDetail()).thenReturn(job);
+        when(tenantRepository.findByName(any())).thenReturn(Optional.of(new Tenant()));
+        when(userRepository
+                .findBySubjectAndTenantName(any(), any())).thenReturn(Optional.of(new User()));
+        when(calendarImportRepository
+                .findById(any())).thenReturn(Optional.of(calendarImport));
+        when(canvasTokenCreator.getToken(any(), any())).thenReturn(oauthToken);
+        when(progressService.updateJob(any(), any(), any())).thenReturn(null);
+        doNothing().when(canvasCalendarService).resetRetryCounter(any());
+        when(depositService.deposit(any(), any())).thenReturn(getClass().getResource("/wrong-headers.csv").toURI().toURL());
+        when(importedEventRepository.findByCalendarImportAndStatusIn(any(), any())).thenReturn(importedEvents);
+        when(calendarReader.getCalendarEvent(any())).thenReturn(Optional.empty());
+        when(calendarWriter.createCalendarEvent(any())).thenThrow(new IOException());
+
+        csvReimportJob.setTenantRepository(tenantRepository);
+        csvReimportJob.setUserRepository(userRepository);
+        csvReimportJob.setCalendarImportRepository(calendarImportRepository);
+        csvReimportJob.setCanvasTokenCreator(canvasTokenCreator);
+        csvReimportJob.setCalendarUrlConfiguration(calendarUrlConfiguration);
+        csvReimportJob.setCSVReader(reader);
+        csvReimportJob.setImportedEventRepository(importedEventRepository);
+        csvReimportJob.setProgressService(progressService);
+        csvReimportJob.setCanvasCalendarService(canvasCalendarService);
+        csvReimportJob.setDepositService(depositService);
+        csvReimportJob.setMaxEventsCSV(1000);
+        csvReimportJob.setCalendarReader(calendarReader);
+        csvReimportJob.setCalendarWriter(calendarWriter);
+
+        assertThrows(JobExecutionException.class, () -> csvReimportJob.execute(context));
         verify(calendarReader, times(1)).getCalendarEvent(any());
     }
 
@@ -129,7 +353,7 @@ class CSVReImportJobTest {
     }
 
     @Test
-    public void testCallNoCalendarImport() throws JOSEException, IOException {
+    public void testCallNoCalendarImport() throws JOSEException, IOException, URISyntaxException {
         CSVReimportJob csvReimportJob = new CSVReimportJob();
 
         CalendarImport calendarImport = new CalendarImport();
@@ -138,8 +362,8 @@ class CSVReImportJobTest {
         JobExecutionContext context = mock(JobExecutionContext.class);
 
         JobDataMap map = new JobDataMap();
-        map.put("time_zone", TimeZone.getDefault().toString());
-        map.put("url", "https://bbc.co.uk");
+        map.put("time_zone",  TimeZone.getTimeZone("UTC").toString());
+        map.put("url", getClass().getResource("/one-event.csv").toURI().toURL().toString());
 
         TenantRepository tenantRepository = mock(TenantRepository.class);
         UserRepository userRepository = mock(UserRepository.class);
@@ -163,7 +387,7 @@ class CSVReImportJobTest {
         when(canvasTokenCreator.getToken(any(), any())).thenReturn(oauthToken);
         when(progressService.updateJob(any(), any(), any())).thenReturn(null);
         doNothing().when(canvasCalendarService).resetRetryCounter(any());
-        when(depositService.deposit(any(), any())).thenReturn(new URL("https://bbc.co.uk"));
+        when(depositService.deposit(any(), any())).thenReturn(getClass().getResource("/one-event.csv").toURI().toURL());
 
         csvReimportJob.setTenantRepository(tenantRepository);
         csvReimportJob.setUserRepository(userRepository);
@@ -179,7 +403,7 @@ class CSVReImportJobTest {
     }
 
     @Test
-    public void testCallNoTimeZone() throws JOSEException, IOException {
+    public void testCallNoTimeZone() throws JOSEException, IOException, URISyntaxException {
         CSVImportJob csvImportJob = new CSVImportJob();
         CalendarImport calendarImport = new CalendarImport();
         Trigger trigger = TriggerBuilder.newTrigger().startNow().withIdentity("key").build();
@@ -188,7 +412,7 @@ class CSVReImportJobTest {
 
         JobDataMap map = new JobDataMap();
         map.put("calendar_import_id", 118L);
-        map.put("url", "https://bbc.co.uk");
+        map.put("url", getClass().getResource("/one-event.csv").toURI().toURL().toString());
 
         TenantRepository tenantRepository = mock(TenantRepository.class);
         UserRepository userRepository = mock(UserRepository.class);
@@ -213,14 +437,14 @@ class CSVReImportJobTest {
         when(canvasTokenCreator.getToken(any(), any())).thenReturn(oauthToken);
         when(progressService.updateJob(any(), any(), any())).thenReturn(null);
         doNothing().when(canvasCalendarService).resetRetryCounter(any());
-        when(depositService.deposit(any(), any())).thenReturn(new URL("https://bbc.co.uk"));
+        when(depositService.deposit(any(), any())).thenReturn(getClass().getResource("/one-event.csv").toURI().toURL());
 
         csvImportJob.setTenantRepository(tenantRepository);
         csvImportJob.setUserRepository(userRepository);
         csvImportJob.setCalendarImportRepository(calendarImportRepository);
         csvImportJob.setCanvasTokenCreator(canvasTokenCreator);
         csvImportJob.setImportedEventRepository(importedEventRepository);
-        csvImportJob.setCSVReader(csvReader);
+//        csvImportJob.setCSVReader(csvReader);
         csvImportJob.setProgressService(progressService);
         csvImportJob.setCanvasCalendarService(canvasCalendarService);
         csvImportJob.setDepositService(depositService);
@@ -243,7 +467,7 @@ class CSVReImportJobTest {
     }
 
     @Test
-    public void testCallNoUser() {
+    public void testCallNoUser() throws URISyntaxException, MalformedURLException {
         CSVReimportJob csvReimportJob = new CSVReimportJob();
         Trigger trigger = TriggerBuilder.newTrigger().startNow().withIdentity("key").build();
         TenantRepository tenantRepository = mock(TenantRepository.class);
@@ -255,8 +479,8 @@ class CSVReImportJobTest {
         JobExecutionContext context = mock(JobExecutionContext.class);
         JobDataMap map = new JobDataMap();
         map.put("calendar_import_id", 118L);
-        map.put("time_zone", TimeZone.getDefault().toString());
-        map.put("url", "http://bbc.co.uk");
+        map.put("time_zone",  TimeZone.getTimeZone("UTC").toString());
+        map.put("url", getClass().getResource("/one-event.csv").toURI().toURL().toString());
         when(context.getMergedJobDataMap()).thenReturn(map);
         when(context.getTrigger()).thenReturn(trigger);
         when(context.getJobDetail()).thenReturn(job);
